deploy: 8a239f3cad3b6f50ddc5ac8b14776b50ea608f35

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "59786fea",
+   "id": "2d287f1e",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc012025",
+   "id": "532563cc",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5accd2d",
+   "id": "96409432",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "872c529f",
+   "id": "4fda8791",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f143c7c",
+   "id": "c57435dc",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b880f80",
+   "id": "5b502d33",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "407dd3bd",
+   "id": "acc4a610",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:00:18.031882Z",
-     "iopub.status.busy": "2024-06-24T19:00:18.031686Z",
-     "iopub.status.idle": "2024-06-24T19:00:22.788269Z",
-     "shell.execute_reply": "2024-06-24T19:00:22.787644Z"
+     "iopub.execute_input": "2024-06-24T19:09:27.250300Z",
+     "iopub.status.busy": "2024-06-24T19:09:27.250076Z",
+     "iopub.status.idle": "2024-06-24T19:09:31.579921Z",
+     "shell.execute_reply": "2024-06-24T19:09:31.579310Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca6a4f10",
+   "id": "33ba70e1",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee77001d",
+   "id": "b75e678f",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20baa99c",
+   "id": "c44100cb",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfce3c23",
+   "id": "d9a1fb40",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a319dbad",
+   "id": "4e42d307",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c1e9f20",
+   "id": "27a756d5",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f08e1c22",
+   "id": "d272e0ac",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "328e80f9",
+   "id": "02e8d11b",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dd3f32e6",
+   "id": "1b633710",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:00:22.791324Z",
-     "iopub.status.busy": "2024-06-24T19:00:22.790876Z",
-     "iopub.status.idle": "2024-06-24T19:00:24.916331Z",
-     "shell.execute_reply": "2024-06-24T19:00:24.915672Z"
+     "iopub.execute_input": "2024-06-24T19:09:31.583003Z",
+     "iopub.status.busy": "2024-06-24T19:09:31.582360Z",
+     "iopub.status.idle": "2024-06-24T19:09:33.429663Z",
+     "shell.execute_reply": "2024-06-24T19:09:33.429073Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b766a14",
+   "id": "8406004b",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c25aec26",
+   "id": "0b70265d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:00:24.918926Z",
-     "iopub.status.busy": "2024-06-24T19:00:24.918524Z",
-     "iopub.status.idle": "2024-06-24T19:00:24.922532Z",
-     "shell.execute_reply": "2024-06-24T19:00:24.921922Z"
+     "iopub.execute_input": "2024-06-24T19:09:33.432406Z",
+     "iopub.status.busy": "2024-06-24T19:09:33.432038Z",
+     "iopub.status.idle": "2024-06-24T19:09:33.435900Z",
+     "shell.execute_reply": "2024-06-24T19:09:33.435308Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b20effa0",
+   "id": "643bcfd9",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a94298f1",
+   "id": "1c0497ef",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bde1268f",
+   "id": "172c29ea",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1183028a",
+   "id": "3dea8011",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3c798c2d",
+   "id": "bb8ed123",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:00:24.924959Z",
-     "iopub.status.busy": "2024-06-24T19:00:24.924588Z",
-     "iopub.status.idle": "2024-06-24T19:00:24.972402Z",
-     "shell.execute_reply": "2024-06-24T19:00:24.971723Z"
+     "iopub.execute_input": "2024-06-24T19:09:33.438308Z",
+     "iopub.status.busy": "2024-06-24T19:09:33.437914Z",
+     "iopub.status.idle": "2024-06-24T19:09:33.482083Z",
+     "shell.execute_reply": "2024-06-24T19:09:33.481479Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db1aab93",
+   "id": "2f50bd59",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8e9c89db",
+   "id": "2a6c3413",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:00:24.974910Z",
-     "iopub.status.busy": "2024-06-24T19:00:24.974533Z",
-     "iopub.status.idle": "2024-06-24T19:00:25.048216Z",
-     "shell.execute_reply": "2024-06-24T19:00:25.047565Z"
+     "iopub.execute_input": "2024-06-24T19:09:33.484829Z",
+     "iopub.status.busy": "2024-06-24T19:09:33.484327Z",
+     "iopub.status.idle": "2024-06-24T19:09:33.550307Z",
+     "shell.execute_reply": "2024-06-24T19:09:33.549628Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f69047a3",
+   "id": "4d13596c",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12697c40",
+   "id": "1e253486",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5394daf8",
+   "id": "e9c0aa52",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:00:25.050866Z",
-     "iopub.status.busy": "2024-06-24T19:00:25.050500Z",
-     "iopub.status.idle": "2024-06-24T19:00:25.084156Z",
-     "shell.execute_reply": "2024-06-24T19:00:25.083557Z"
+     "iopub.execute_input": "2024-06-24T19:09:33.552991Z",
+     "iopub.status.busy": "2024-06-24T19:09:33.552501Z",
+     "iopub.status.idle": "2024-06-24T19:09:33.581746Z",
+     "shell.execute_reply": "2024-06-24T19:09:33.581160Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d26a9d7",
+   "id": "b11d8a42",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471757ad",
+   "id": "b156c18e",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fae82d08",
+   "id": "d86ac56f",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6326a160",
+   "id": "063440f9",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87cd86ea",
+   "id": "f61cbcc1",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "91e17cae",
+   "id": "c77ab751",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:00:25.086851Z",
-     "iopub.status.busy": "2024-06-24T19:00:25.086453Z",
-     "iopub.status.idle": "2024-06-24T19:00:25.091041Z",
-     "shell.execute_reply": "2024-06-24T19:00:25.090371Z"
+     "iopub.execute_input": "2024-06-24T19:09:33.584530Z",
+     "iopub.status.busy": "2024-06-24T19:09:33.584040Z",
+     "iopub.status.idle": "2024-06-24T19:09:33.588695Z",
+     "shell.execute_reply": "2024-06-24T19:09:33.588099Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79d21d7f",
+   "id": "4e5d6a8a",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "772c58b7",
+   "id": "ec0919aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:00:25.093680Z",
-     "iopub.status.busy": "2024-06-24T19:00:25.093127Z",
-     "iopub.status.idle": "2024-06-24T19:00:25.096472Z",
-     "shell.execute_reply": "2024-06-24T19:00:25.095850Z"
+     "iopub.execute_input": "2024-06-24T19:09:33.591111Z",
+     "iopub.status.busy": "2024-06-24T19:09:33.590616Z",
+     "iopub.status.idle": "2024-06-24T19:09:33.593700Z",
+     "shell.execute_reply": "2024-06-24T19:09:33.593211Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acb424e7",
+   "id": "72962ce6",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6907c57e",
+   "id": "fe72d95f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:00:25.098868Z",
-     "iopub.status.busy": "2024-06-24T19:00:25.098389Z",
-     "iopub.status.idle": "2024-06-24T19:00:27.628900Z",
-     "shell.execute_reply": "2024-06-24T19:00:27.628246Z"
+     "iopub.execute_input": "2024-06-24T19:09:33.596057Z",
+     "iopub.status.busy": "2024-06-24T19:09:33.595695Z",
+     "iopub.status.idle": "2024-06-24T19:09:36.030901Z",
+     "shell.execute_reply": "2024-06-24T19:09:36.030278Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bb41be5",
+   "id": "78403c95",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da797399",
+   "id": "df343dd1",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b74b610",
+   "id": "a46b80b8",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d79c2af",
+   "id": "9808819a",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "de5e63c9",
+   "id": "e696d225",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:00:27.631639Z",
-     "iopub.status.busy": "2024-06-24T19:00:27.631136Z",
-     "iopub.status.idle": "2024-06-24T19:00:27.635293Z",
-     "shell.execute_reply": "2024-06-24T19:00:27.634495Z"
+     "iopub.execute_input": "2024-06-24T19:09:36.033613Z",
+     "iopub.status.busy": "2024-06-24T19:09:36.033221Z",
+     "iopub.status.idle": "2024-06-24T19:09:36.037110Z",
+     "shell.execute_reply": "2024-06-24T19:09:36.036447Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f7eb81e3ce0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f025c5e3ba0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d22199f8",
+   "id": "c5db538e",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0354ef4",
+   "id": "062c4f57",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "339ae3c2",
+   "id": "ce7493de",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "679477fb",
+   "id": "cc379248",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "24426e63",
+   "id": "53b7513a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:00:27.637645Z",
-     "iopub.status.busy": "2024-06-24T19:00:27.637306Z",
-     "iopub.status.idle": "2024-06-24T19:00:27.640681Z",
-     "shell.execute_reply": "2024-06-24T19:00:27.639963Z"
+     "iopub.execute_input": "2024-06-24T19:09:36.039548Z",
+     "iopub.status.busy": "2024-06-24T19:09:36.039158Z",
+     "iopub.status.idle": "2024-06-24T19:09:36.042394Z",
+     "shell.execute_reply": "2024-06-24T19:09:36.041832Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ab66a52f",
+   "id": "7c21150b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:00:27.643289Z",
-     "iopub.status.busy": "2024-06-24T19:00:27.642786Z",
-     "iopub.status.idle": "2024-06-24T19:00:28.768525Z",
-     "shell.execute_reply": "2024-06-24T19:00:28.767869Z"
+     "iopub.execute_input": "2024-06-24T19:09:36.044618Z",
+     "iopub.status.busy": "2024-06-24T19:09:36.044261Z",
+     "iopub.status.idle": "2024-06-24T19:09:37.111814Z",
+     "shell.execute_reply": "2024-06-24T19:09:37.111190Z"
     }
    },
    "outputs": [
