deploy: 56f05c226d33d3079eea08519969bb1527814588

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2d287f1e",
+   "id": "b5b2e23a",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "532563cc",
+   "id": "1ac83585",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96409432",
+   "id": "2685551b",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fda8791",
+   "id": "a203332f",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c57435dc",
+   "id": "b799ae2d",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b502d33",
+   "id": "0083159d",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "acc4a610",
+   "id": "3d07e9b8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:09:27.250300Z",
-     "iopub.status.busy": "2024-06-24T19:09:27.250076Z",
-     "iopub.status.idle": "2024-06-24T19:09:31.579921Z",
-     "shell.execute_reply": "2024-06-24T19:09:31.579310Z"
+     "iopub.execute_input": "2024-08-15T13:43:03.070747Z",
+     "iopub.status.busy": "2024-08-15T13:43:03.070551Z",
+     "iopub.status.idle": "2024-08-15T13:43:07.547967Z",
+     "shell.execute_reply": "2024-08-15T13:43:07.547306Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33ba70e1",
+   "id": "b6f3e71c",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b75e678f",
+   "id": "8d546b6f",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c44100cb",
+   "id": "d3b2ad6a",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9a1fb40",
+   "id": "27dd20a7",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e42d307",
+   "id": "5b766fcf",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27a756d5",
+   "id": "22141aac",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d272e0ac",
+   "id": "deeb02f4",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02e8d11b",
+   "id": "caa62849",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1b633710",
+   "id": "dd156b30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:09:31.583003Z",
-     "iopub.status.busy": "2024-06-24T19:09:31.582360Z",
-     "iopub.status.idle": "2024-06-24T19:09:33.429663Z",
-     "shell.execute_reply": "2024-06-24T19:09:33.429073Z"
+     "iopub.execute_input": "2024-08-15T13:43:07.550974Z",
+     "iopub.status.busy": "2024-08-15T13:43:07.550524Z",
+     "iopub.status.idle": "2024-08-15T13:43:09.572273Z",
+     "shell.execute_reply": "2024-08-15T13:43:09.571699Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8406004b",
+   "id": "1e0048f2",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0b70265d",
+   "id": "67a1fb50",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:09:33.432406Z",
-     "iopub.status.busy": "2024-06-24T19:09:33.432038Z",
-     "iopub.status.idle": "2024-06-24T19:09:33.435900Z",
-     "shell.execute_reply": "2024-06-24T19:09:33.435308Z"
+     "iopub.execute_input": "2024-08-15T13:43:09.574938Z",
+     "iopub.status.busy": "2024-08-15T13:43:09.574544Z",
+     "iopub.status.idle": "2024-08-15T13:43:09.578426Z",
+     "shell.execute_reply": "2024-08-15T13:43:09.577808Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "643bcfd9",
+   "id": "a0e8e310",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c0497ef",
+   "id": "ed6f9095",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "172c29ea",
+   "id": "fa787314",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dea8011",
+   "id": "b3de18f2",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bb8ed123",
+   "id": "9fe54dc5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:09:33.438308Z",
-     "iopub.status.busy": "2024-06-24T19:09:33.437914Z",
-     "iopub.status.idle": "2024-06-24T19:09:33.482083Z",
-     "shell.execute_reply": "2024-06-24T19:09:33.481479Z"
+     "iopub.execute_input": "2024-08-15T13:43:09.581034Z",
+     "iopub.status.busy": "2024-08-15T13:43:09.580565Z",
+     "iopub.status.idle": "2024-08-15T13:43:09.627365Z",
+     "shell.execute_reply": "2024-08-15T13:43:09.626723Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f50bd59",
+   "id": "b5faf603",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2a6c3413",
+   "id": "83ba22ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:09:33.484829Z",
-     "iopub.status.busy": "2024-06-24T19:09:33.484327Z",
-     "iopub.status.idle": "2024-06-24T19:09:33.550307Z",
-     "shell.execute_reply": "2024-06-24T19:09:33.549628Z"
+     "iopub.execute_input": "2024-08-15T13:43:09.630141Z",
+     "iopub.status.busy": "2024-08-15T13:43:09.629778Z",
+     "iopub.status.idle": "2024-08-15T13:43:09.701235Z",
+     "shell.execute_reply": "2024-08-15T13:43:09.700589Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d13596c",
+   "id": "c4239ca2",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e253486",
+   "id": "505763bb",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e9c0aa52",
+   "id": "0c5d03a5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:09:33.552991Z",
-     "iopub.status.busy": "2024-06-24T19:09:33.552501Z",
-     "iopub.status.idle": "2024-06-24T19:09:33.581746Z",
-     "shell.execute_reply": "2024-06-24T19:09:33.581160Z"
+     "iopub.execute_input": "2024-08-15T13:43:09.703810Z",
+     "iopub.status.busy": "2024-08-15T13:43:09.703420Z",
+     "iopub.status.idle": "2024-08-15T13:43:09.735061Z",
+     "shell.execute_reply": "2024-08-15T13:43:09.734485Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b11d8a42",
+   "id": "fc062ba0",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b156c18e",
+   "id": "a6182e1d",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d86ac56f",
+   "id": "11c5d5c4",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "063440f9",
+   "id": "b5484903",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f61cbcc1",
+   "id": "d4d15fa6",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c77ab751",
+   "id": "265b8bff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:09:33.584530Z",
-     "iopub.status.busy": "2024-06-24T19:09:33.584040Z",
-     "iopub.status.idle": "2024-06-24T19:09:33.588695Z",
-     "shell.execute_reply": "2024-06-24T19:09:33.588099Z"
+     "iopub.execute_input": "2024-08-15T13:43:09.737799Z",
+     "iopub.status.busy": "2024-08-15T13:43:09.737314Z",
+     "iopub.status.idle": "2024-08-15T13:43:09.741740Z",
+     "shell.execute_reply": "2024-08-15T13:43:09.741184Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e5d6a8a",
+   "id": "1ca1d164",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ec0919aa",
+   "id": "a3eb242a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:09:33.591111Z",
-     "iopub.status.busy": "2024-06-24T19:09:33.590616Z",
-     "iopub.status.idle": "2024-06-24T19:09:33.593700Z",
-     "shell.execute_reply": "2024-06-24T19:09:33.593211Z"
+     "iopub.execute_input": "2024-08-15T13:43:09.744351Z",
+     "iopub.status.busy": "2024-08-15T13:43:09.743868Z",
+     "iopub.status.idle": "2024-08-15T13:43:09.747323Z",
+     "shell.execute_reply": "2024-08-15T13:43:09.746709Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72962ce6",
+   "id": "77bf5f9a",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fe72d95f",
+   "id": "2cfcec5a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:09:33.596057Z",
-     "iopub.status.busy": "2024-06-24T19:09:33.595695Z",
-     "iopub.status.idle": "2024-06-24T19:09:36.030901Z",
-     "shell.execute_reply": "2024-06-24T19:09:36.030278Z"
+     "iopub.execute_input": "2024-08-15T13:43:09.749869Z",
+     "iopub.status.busy": "2024-08-15T13:43:09.749391Z",
+     "iopub.status.idle": "2024-08-15T13:43:12.269812Z",
+     "shell.execute_reply": "2024-08-15T13:43:12.269091Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78403c95",
+   "id": "fe7e4a86",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df343dd1",
+   "id": "806119c5",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a46b80b8",
+   "id": "d7124d64",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9808819a",
+   "id": "3d79ab3d",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e696d225",
+   "id": "13c35990",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:09:36.033613Z",
-     "iopub.status.busy": "2024-06-24T19:09:36.033221Z",
-     "iopub.status.idle": "2024-06-24T19:09:36.037110Z",
-     "shell.execute_reply": "2024-06-24T19:09:36.036447Z"
+     "iopub.execute_input": "2024-08-15T13:43:12.272529Z",
+     "iopub.status.busy": "2024-08-15T13:43:12.272124Z",
+     "iopub.status.idle": "2024-08-15T13:43:12.276011Z",
+     "shell.execute_reply": "2024-08-15T13:43:12.275383Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f025c5e3ba0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f1881540900>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5db538e",
+   "id": "3e32cd26",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "062c4f57",
+   "id": "0cfc4163",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce7493de",
+   "id": "c4af8ae1",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc379248",
+   "id": "94a2b48d",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "53b7513a",
+   "id": "5eea7aea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:09:36.039548Z",
-     "iopub.status.busy": "2024-06-24T19:09:36.039158Z",
-     "iopub.status.idle": "2024-06-24T19:09:36.042394Z",
-     "shell.execute_reply": "2024-06-24T19:09:36.041832Z"
+     "iopub.execute_input": "2024-08-15T13:43:12.278521Z",
+     "iopub.status.busy": "2024-08-15T13:43:12.278145Z",
+     "iopub.status.idle": "2024-08-15T13:43:12.281269Z",
+     "shell.execute_reply": "2024-08-15T13:43:12.280775Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7c21150b",
+   "id": "0e69332a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T19:09:36.044618Z",
-     "iopub.status.busy": "2024-06-24T19:09:36.044261Z",
-     "iopub.status.idle": "2024-06-24T19:09:37.111814Z",
-     "shell.execute_reply": "2024-06-24T19:09:37.111190Z"
+     "iopub.execute_input": "2024-08-15T13:43:12.283553Z",
+     "iopub.status.busy": "2024-08-15T13:43:12.283214Z",
+     "iopub.status.idle": "2024-08-15T13:43:13.359728Z",
+     "shell.execute_reply": "2024-08-15T13:43:13.359125Z"
     }
    },
    "outputs": [
